# templates

./: template.py
cmake/: setup.py
cmake/src/: CMakeLists.txt
collections/: .gitignore
default/cmake/: CMakeLists.txt  README.md
default/cmake/src/: main.cpp
default/cmake/test/: CMakeLists.txt
default/runscript/: .templateRules.py.swp  templateRules.py
